# examples

actor/kvcounter/: README.md  config.yml  httpserver.wit  keyvalue.wit  wasmbus-receiver.wit  wasmbus-sender.wit
actor/kvcounter/actor/: Cargo.toml
actor/kvcounter/actor/src/: lib.rs
actor/kvcounter/httpserver/: Cargo.toml
actor/kvcounter/httpserver/src/: lib.rs
actor/kvcounter/keyvalue/: Cargo.toml
actor/kvcounter/keyvalue/src/: lib.rs
actor/kvcounter/wasmbus-sender/: Cargo.toml
actor/kvcounter/wasmbus-sender/src/: lib.rs
