[package]
name = "kvcounter-actor"
version = "0.4.3"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = "1.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", default_features = false }

[package.metadata.component]
direct-interface-export = "httpserver"

[package.metadata.component.exports]
httpserver = "../httpserver.wit"

[package.metadata.component.imports]
keyvalue = "../keyvalue.wit"