[package]
name = "keyvalue"
version = "0.2.0"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", default_features = false }

[package.metadata.component]
direct-interface-export = "keyvalue"

[package.metadata.component.exports]
keyvalue = "../keyvalue.wit"

[package.metadata.component.imports]
wasmbus_sender = "../wasmbus-sender.wit"