[package]
name = "wasmbus-sender"
version = "0.2.0"
authors = [ "wasmcloud Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json ="1.0"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", default_features = false }

[package.metadata.component]
direct-interface-export = "wasmbus_sender"

[package.metadata.component.exports]
wasmbus_sender = "../wasmbus-sender.wit"
